# churn-sense

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  docker-compose.yml  predictions.py  pyproject.toml  requirements.txt  run.py  setup.py
notebooks/: 01_data_exploration.ipynb  02_model_building.ipynb  03_model_evaluation.ipynb
src/: __init__.py
src/churnsense/: __init__.py  cli.py
src/churnsense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/churnsense/cli/: __init__.py  main.py
src/churnsense/config/: __init__.py
src/churnsense/dashboard/: __init__.py  app.py  callbacks.py  layout.py
src/churnsense/data/: __init__.py  features.py  loader.py  processor.py
src/churnsense/model/: __init__.py  evaluator.py  predictor.py  trainer.py
src/churnsense/models/: __init__.py  evaluation.py  factory.py
src/churnsense/pipeline/: __init__.py  model_pipeline.py
src/churnsense/pipelines/: __init__.py  data_pipeline.py  model_pipeline.py
src/churnsense/utils/: __init__.py  exceptions.py  logging.py  visualization.py
src/data/: __init__.py  data_loader.py  data_preprocessing.py  feature_engineering.py
src/models/: __init__.py  evaluation.py  model_factory.py  training.py
src/pipeline/: __init__.py  data_pipeline.py  model_pipeline.py
src/utils/: __init__.py  config.py  helpers.py
src/visualization/: __init__.py  data_viz.py  interactive_viz.py  model_viz.py
tests/: conftest.py  test_data_processor.py
