[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churnsense"
version = "0.1.0"
description = "Machine learning platform for predicting customer churn"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license-files = ["MIT"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.3.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "joblib>=1.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "scipy>=1.7.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "mypy>=0.900",
    "black>=21.5b2",
    "isort>=5.9.1",
    "flake8>=3.9.2",
    "pre-commit>=2.13.0",
    "tox>=3.24.0",
]
docs = [
    "sphinx>=4.0.2",
    "sphinx-rtd-theme>=0.5.2",
    "myst-parser>=0.15.1",
]

[project.urls]
"Homepage" = "https://github.com/salgue441/churn-sense"
"Bug Tracker" = "https://github.com/salgue441/churn-sense/issues"

[project.scripts]
churnsense-dashboard = "churnsense.cli:run_dashboard"
churnsense-train = "churnsense.cli:train_model"
churnsense-predict = "churnsense.cli:predict"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["churnsense"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"